--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -5,3 +5,12 @@ download.file("https://raw.githubusercontent.com/markziemann/SLE712_files/master
 gene <- read.table("gene_expression.tsv")
 head(gene) # Show a table of value for the first six genes
 str(gene)
+
+# Question 2. Make a new column which is the mean of the other columns. Show a table of values for the first six genes.
+
+gene <- read.table("gene_expression.tsv" , header = TRUE, stringsAsFactors = FALSE, row.names = 1)
+gene$Means <- rowMeans(gene)
+head(gene)
+str(gene)
+str
+
