--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -21,8 +21,16 @@ head(gene[order(-gene$Mean), ])
 head(gene[order(-gene$Mean),],10)
 
 # Question 4. Determine the number of genes with a mean <10.
-subset(gene, Mean<10)
-filtered <- subset(gene,Mean<10)
+subset(gene,mean<10)
+filtered <-subset(gene,mean<10)
 nrow(filtered)
 
+# Question 5. Make a histogram plot of the mean values in png format and paste it to your report.
+hist(gene$Mean)
+hist(gene$Mean, breaks= 20)
+
+download.file("https://raw.githubusercontent.com/markziemann/SLE712_files/master/bioinfo_asst3_part1_files/growth_data.csv", destfile = "growth_data.csv")
+y <- read.table("growth_data.csv")
+head(y)
+str(y)
 
