--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -14,6 +14,7 @@ head(gene)
 str(gene)
 
 # Question 3. List the 10 genes with highest gene expression
+
 order(gene$Mean)
 gene[order(gene$Mean), ]
 gene[order(-gene$Mean), ]
@@ -21,9 +22,8 @@ head(gene[order(-gene$Mean), ])
 head(gene[order(-gene$Mean),],10)
 
 # Question 4. Determine the number of genes with a mean <10.
-subset(gene,mean<10)
-filtered <-subset(gene,mean<10)
-nrow(filtered)
+gene[(gene[,3]<10),]
+nrow(gene)
 
 # Question 5. Make a histogram plot of the mean values in png format and paste it to your report.
 hist(gene$Mean)
