changes done in Question 6

--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -29,8 +29,11 @@ nrow(gene)
 hist(gene$Mean)
 hist(gene$Mean, breaks= 20)
 
+# Question 6. Import this csv file into an R object. What are the column names?
+# In order to import the file in R, we will firstly use download.file command and then the dest.file command to provide a destination for the downloaded file.
 download.file("https://raw.githubusercontent.com/markziemann/SLE712_files/master/bioinfo_asst3_part1_files/growth_data.csv", destfile = "growth_data.csv")
-y <- read.table("growth_data.csv")
-head(y)
-str(y)
+gd <- read.table("growth_data.csv")
+head(gd)
+str(gd)
+colnames(gd)
 
