Error in question 9

--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -68,3 +68,11 @@ boxplot(NE$Circumf_2004_cm, NE$Circumf_2019_cm, SW$Circumf_2004_cm, SW$Circumf_2
 boxplot(NE$Circumf_2004_cm, NE$Circumf_2019_cm, SW$Circumf_2004_cm, SW$Circumf_2019_cm, names = c("NE2004", "NE2019", "SW2004", "SW2019"), ylab="Circumfrence (cm)")
 boxplot(NE$Circumf_2004_cm, NE$Circumf_2019_cm, SW$Circumf_2004_cm, SW$Circumf_2019_cm, names = c("NE2004", "NE2019", "SW2004", "SW2019"), ylab="Circumfrence (cm)", main="Growth at two plantation sites")
 
+# Question 9. Calculate the mean growth over the past 10 years at eah site.
+
+ne$growth <-ne$Circumf_2009_cm
+head(ne)
+
+sw$growth <-sw$Circumf_2019_cm-sw$Circumf_2009_cm
+head(sw)
+
