--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -2,6 +2,7 @@
 download.file("https://raw.githubusercontent.com/markziemann/SLE712_files/master/bioinfo_asst3_part1_files/gene_expression.tsv", destfile = "gene_expression.tsv")
 
 # Question 1. Read in the file, making the gene accession numbers the row names. Show a table of values for the first six genes.
+# We will use read.table function to convert and read the values in tabular format
 gene <- read.table("gene_expression.tsv")
 head(gene) # Show a table of value for the first six genes
 str(gene)
@@ -78,4 +79,7 @@ head(SW)
 # Question 10.Use the t.test and wilcox.test functions to estimate the p-value that the 10 year growth is different atthe two sites.
 t.test(SW$growth,NE$growth)
 wilcox.test(SW$growth,NE$growth)
+
+# Part 2: Determine the limits of BLAST
+# We need some packages to be able to work with R. So, first we will load them.
 
