--- a/29Bioinformatics Project.Rmd
+++ b/29Bioinformatics Project.Rmd
@@ -126,7 +126,7 @@ length(Gdata)
 
 download.file("https://raw.githubusercontent.com/markziemann/SLE712_files/master/bioinfo_asst3_part2_files/mutblast_functions.R",destfile = "mutblast.R")
 
-source("mutblast.R)
+source("mutblast.R")
 myblastn_tab
 
 res <- myblastn_tab(myseq = gdata, db = "Escherichia_coli_str_k_12_substr_mg1655.ASM584v2.cds.all.fa")
